TESB-6530 - Command line throws Malformed URL exception when exporting or publishing service with relative URL
git-svn-id: http://talendforge.org/svn/tos/branches/branch-5_2@97184 f6f1c999-d317-4740-80b0-e6d1abc6f99e